--- a/NeuralNetworks.ipynb
+++ b/NeuralNetworks.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Merging csv files for IDS2017"
+    "## Merging csv files for IDS2017 (not sure if it works)"
    ]
   },
   {
@@ -54,10 +54,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "os.environ['KMP_DUPLICATE_LIB_OK'] = 'True'\n",
+    "\n",
     "def load_data(file_path, cols=None):\n",
     "    COL_NAMES = [\"duration\", \"protocol_type\", \"service\", \"flag\", \"src_bytes\",\n",
     "                 \"dst_bytes\", \"land\", \"wrong_fragment\", \"urgent\", \"hot\", \"num_failed_logins\",\n",
@@ -70,7 +73,11 @@
     "                 \"dst_host_srv_diff_host_rate\", \"dst_host_serror_rate\", \"dst_host_srv_serror_rate\",\n",
     "                 \"dst_host_rerror_rate\", \"dst_host_srv_rerror_rate\", \"labels\"]\n",
     "\n",
-    "    data = pd.read_csv(file_path, names=COL_NAMES, index_col=False)\n",
+    "    data = pd.read_csv(file_path, index_col=False)\n",
+    "    chunksize = 100000\n",
+    "    tfr = pd.read_csv('./movielens/ratings.csv', chunksize=chunksize, iterator=True)\n",
+    "    df = pd.concat(tfr, ignore_index=True)\n",
+    "\n",
     "    # Shuffle data\n",
     "    data = data.sample(frac=1).reset_index(drop=True)\n",
     "    NOM_IND = [1, 2, 3]\n",
@@ -99,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,253 +179,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>duration</th>\n",
-       "      <th>protocol_type</th>\n",
-       "      <th>service</th>\n",
-       "      <th>flag</th>\n",
-       "      <th>src_bytes</th>\n",
-       "      <th>dst_bytes</th>\n",
-       "      <th>land</th>\n",
-       "      <th>wrong_fragment</th>\n",
-       "      <th>urgent</th>\n",
-       "      <th>hot</th>\n",
-       "      <th>...</th>\n",
-       "      <th>dst_host_count</th>\n",
-       "      <th>dst_host_srv_count</th>\n",
-       "      <th>dst_host_same_srv_rate</th>\n",
-       "      <th>dst_host_diff_srv_rate</th>\n",
-       "      <th>dst_host_same_src_port_rate</th>\n",
-       "      <th>dst_host_srv_diff_host_rate</th>\n",
-       "      <th>dst_host_serror_rate</th>\n",
-       "      <th>dst_host_srv_serror_rate</th>\n",
-       "      <th>dst_host_rerror_rate</th>\n",
-       "      <th>dst_host_srv_rerror_rate</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.260870</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>5.797253e-09</td>\n",
-       "      <td>1.740541e-07</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.007843</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.07</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.65</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.217391</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>7.478457e-07</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.325490</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.550725</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.027451</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.347826</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>1.978313e-07</td>\n",
-       "      <td>3.413140e-06</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.533333</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.173913</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>3.188489e-08</td>\n",
-       "      <td>1.038218e-07</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.996078</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 41 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   duration  protocol_type   service  flag     src_bytes     dst_bytes  land  \\\n",
-       "0       0.0            0.5  0.260870   0.9  5.797253e-09  1.740541e-07     0   \n",
-       "1       0.0            0.0  0.217391   0.9  7.478457e-07  0.000000e+00     0   \n",
-       "2       0.0            0.5  0.550725   0.5  0.000000e+00  0.000000e+00     0   \n",
-       "3       0.0            0.5  0.347826   0.9  1.978313e-07  3.413140e-06     0   \n",
-       "4       0.0            1.0  0.173913   0.9  3.188489e-08  1.038218e-07     0   \n",
-       "\n",
-       "   wrong_fragment  urgent  hot  ...  dst_host_count  dst_host_srv_count  \\\n",
-       "0             0.0     0.0  0.0  ...        1.000000            0.007843   \n",
-       "1             0.0     0.0  0.0  ...        1.000000            0.325490   \n",
-       "2             0.0     0.0  0.0  ...        1.000000            0.027451   \n",
-       "3             0.0     0.0  0.0  ...        0.533333            1.000000   \n",
-       "4             0.0     0.0  0.0  ...        1.000000            0.996078   \n",
-       "\n",
-       "   dst_host_same_srv_rate  dst_host_diff_srv_rate  \\\n",
-       "0                    0.01                    0.07   \n",
-       "1                    0.33                    0.02   \n",
-       "2                    0.03                    0.06   \n",
-       "3                    1.00                    0.00   \n",
-       "4                    1.00                    0.01   \n",
-       "\n",
-       "   dst_host_same_src_port_rate  dst_host_srv_diff_host_rate  \\\n",
-       "0                         0.00                         0.00   \n",
-       "1                         0.33                         0.00   \n",
-       "2                         0.00                         0.00   \n",
-       "3                         0.01                         0.04   \n",
-       "4                         0.00                         0.00   \n",
-       "\n",
-       "   dst_host_serror_rate  dst_host_srv_serror_rate  dst_host_rerror_rate  \\\n",
-       "0                  0.65                       0.0                  0.01   \n",
-       "1                  0.02                       0.0                  0.00   \n",
-       "2                  1.00                       1.0                  0.00   \n",
-       "3                  0.00                       0.0                  0.00   \n",
-       "4                  0.00                       0.0                  0.00   \n",
-       "\n",
-       "   dst_host_srv_rerror_rate  \n",
-       "0                       0.0  \n",
-       "1                       0.0  \n",
-       "2                       0.0  \n",
-       "3                       0.0  \n",
-       "4                       0.0  \n",
-       "\n",
-       "[5 rows x 41 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train_data, train_labels = load_data('KDDTrain+.csv')\n",
+    "train_data, train_labels = load_data('data/concat.csv')\n",
     "train_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy on training set: 96.559580%\n",
-      "Precision on training set: 98.020660%\n",
-      "Recall on training set: 94.516459%\n",
-      "F measure on training set: 96.236671%\n"
+     "ename": "NameError",
+     "evalue": "name 'train_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-53fbde3d2dc2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mclf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_clf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_labels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'train_data' is not defined"
      ]
     }
    ],
    "source": [
-    "clf = train_clf(train_data, train_labels)"
+    "clf = train_clf(train_data, train_labels)\n"
    ]
   },
   {
@@ -851,7 +638,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
