slicing ids 2017 to test and train sets

--- a/NeuralNetworks.ipynb
+++ b/NeuralNetworks.ipynb
@@ -131,6 +131,378 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Slicing IDS 2017 to Training Set and Test Set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ['KMP_DUPLICATE_LIB_OK'] = 'True'\n",
+    "\n",
+    "def load_slice_data(file_path, cols=None):\n",
+    "    COL_NAMES = [\"duration\", \"protocol_type\", \"service\", \"flag\", \"src_bytes\",\n",
+    "                 \"dst_bytes\", \"land\", \"wrong_fragment\", \"urgent\", \"hot\", \"num_failed_logins\",\n",
+    "                 \"logged_in\", \"num_compromised\", \"root_shell\", \"su_attempted\", \"num_root\",\n",
+    "                 \"num_file_creations\", \"num_shells\", \"num_access_files\", \"num_outbound_cmds\",\n",
+    "                 \"is_host_login\", \"is_guest_login\", \"count\", \"srv_count\", \"serror_rate\",\n",
+    "                 \"srv_serror_rate\", \"rerror_rate\", \"srv_rerror_rate\", \"same_srv_rate\",\n",
+    "                 \"diff_srv_rate\", \"srv_diff_host_rate\", \"dst_host_count\", \"dst_host_srv_count\",\n",
+    "                 \"dst_host_same_srv_rate\", \"dst_host_diff_srv_rate\", \"dst_host_same_src_port_rate\",\n",
+    "                 \"dst_host_srv_diff_host_rate\", \"dst_host_serror_rate\", \"dst_host_srv_serror_rate\",\n",
+    "                 \"dst_host_rerror_rate\", \"dst_host_srv_rerror_rate\", \"labels\"]\n",
+    "\n",
+    "    data = pd.read_csv(file_path)\n",
+    "    \n",
+    " \n",
+    "    \n",
+    "    #Issues with values on columns 14 and 15\n",
+    "    #data.replace(\"NaN\" ,0,inplace=True)\n",
+    "    #data.replace(\"Infinity\", 0, inplace=True)\n",
+    "    \n",
+    "    data.dropna(inplace=True)\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    for col in data.columns:\n",
+    "        if (sum(data[col] =='NaN') > 0):\n",
+    "            print(\"Error : still NaN values in data \\n\")\n",
+    "        \n",
+    "        if(sum(data[col] =='Infinity') >0):\n",
+    "            print(\"Error : still Infinity values in data \\n\")\n",
+    "        \n",
+    "    \"\"\" \n",
+    "    \n",
+    "  \n",
+    "    for col in data.columns: \n",
+    "        if(col == \" Label\") : print(\"Ignorer colonne Label\")\n",
+    "        \n",
+    "        else : data = data.loc[(data[col] < np.finfo(np.float64).max )] \n",
+    "        \n",
+    "    # Shuffle data\n",
+    "\n",
+    "    data = data.sample(frac=1).reset_index(drop=True)\n",
+    "      \n",
+    "    #labels = data[' Label']        #VILAIN IDS2017 POUR L'ESPACE DEVANT DANS ' LABEL'. Bien profond hein.\n",
+    "    #data.drop(' Label', axis=1, inplace=True)\n",
+    "    \n",
+    "    #data.iloc[:] = minmax_scale(data.iloc[:])\n",
+    "    \n",
+    "        \n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ignorer colonne Label\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_data = load_slice_data('concat.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2827876, 79)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_data.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2120907, 79)\n",
+      "(706969, 79)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Destination Port</th>\n",
+       "      <th>Flow Duration</th>\n",
+       "      <th>Total Fwd Packets</th>\n",
+       "      <th>Total Backward Packets</th>\n",
+       "      <th>Total Length of Fwd Packets</th>\n",
+       "      <th>Total Length of Bwd Packets</th>\n",
+       "      <th>Fwd Packet Length Max</th>\n",
+       "      <th>Fwd Packet Length Min</th>\n",
+       "      <th>Fwd Packet Length Mean</th>\n",
+       "      <th>Fwd Packet Length Std</th>\n",
+       "      <th>...</th>\n",
+       "      <th>min_seg_size_forward</th>\n",
+       "      <th>Active Mean</th>\n",
+       "      <th>Active Std</th>\n",
+       "      <th>Active Max</th>\n",
+       "      <th>Active Min</th>\n",
+       "      <th>Idle Mean</th>\n",
+       "      <th>Idle Std</th>\n",
+       "      <th>Idle Max</th>\n",
+       "      <th>Idle Min</th>\n",
+       "      <th>Label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2120907</th>\n",
+       "      <td>50879</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>6</td>\n",
+       "      <td>18.5</td>\n",
+       "      <td>17.67767</td>\n",
+       "      <td>...</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>BENIGN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2120908</th>\n",
+       "      <td>56809</td>\n",
+       "      <td>43</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>BENIGN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2120909</th>\n",
+       "      <td>53</td>\n",
+       "      <td>30809</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>53</td>\n",
+       "      <td>69</td>\n",
+       "      <td>53</td>\n",
+       "      <td>53</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>BENIGN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2120910</th>\n",
+       "      <td>53</td>\n",
+       "      <td>201</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>78</td>\n",
+       "      <td>256</td>\n",
+       "      <td>39</td>\n",
+       "      <td>39</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>BENIGN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2120911</th>\n",
+       "      <td>1031</td>\n",
+       "      <td>43</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PortScan</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 79 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Destination Port   Flow Duration   Total Fwd Packets  \\\n",
+       "2120907              50879               3                   2   \n",
+       "2120908              56809              43                   1   \n",
+       "2120909                 53           30809                   1   \n",
+       "2120910                 53             201                   2   \n",
+       "2120911               1031              43                   1   \n",
+       "\n",
+       "          Total Backward Packets  Total Length of Fwd Packets  \\\n",
+       "2120907                        0                           37   \n",
+       "2120908                        1                            0   \n",
+       "2120909                        1                           53   \n",
+       "2120910                        2                           78   \n",
+       "2120911                        1                            2   \n",
+       "\n",
+       "          Total Length of Bwd Packets   Fwd Packet Length Max  \\\n",
+       "2120907                             0                      31   \n",
+       "2120908                             0                       0   \n",
+       "2120909                            69                      53   \n",
+       "2120910                           256                      39   \n",
+       "2120911                             6                       2   \n",
+       "\n",
+       "          Fwd Packet Length Min   Fwd Packet Length Mean  \\\n",
+       "2120907                       6                     18.5   \n",
+       "2120908                       0                      0.0   \n",
+       "2120909                      53                     53.0   \n",
+       "2120910                      39                     39.0   \n",
+       "2120911                       2                      2.0   \n",
+       "\n",
+       "          Fwd Packet Length Std  ...   min_seg_size_forward  Active Mean  \\\n",
+       "2120907                17.67767  ...                     20          0.0   \n",
+       "2120908                 0.00000  ...                     20          0.0   \n",
+       "2120909                 0.00000  ...                     20          0.0   \n",
+       "2120910                 0.00000  ...                     32          0.0   \n",
+       "2120911                 0.00000  ...                     24          0.0   \n",
+       "\n",
+       "          Active Std   Active Max   Active Min  Idle Mean   Idle Std  \\\n",
+       "2120907          0.0            0            0        0.0        0.0   \n",
+       "2120908          0.0            0            0        0.0        0.0   \n",
+       "2120909          0.0            0            0        0.0        0.0   \n",
+       "2120910          0.0            0            0        0.0        0.0   \n",
+       "2120911          0.0            0            0        0.0        0.0   \n",
+       "\n",
+       "          Idle Max   Idle Min     Label  \n",
+       "2120907          0          0    BENIGN  \n",
+       "2120908          0          0    BENIGN  \n",
+       "2120909          0          0    BENIGN  \n",
+       "2120910          0          0    BENIGN  \n",
+       "2120911          0          0  PortScan  \n",
+       "\n",
+       "[5 rows x 79 columns]"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "chunk = int (train_data.shape[0]*75/100)  #ratio = 75 %  /  25% \n",
+    "train_set =train_data.iloc[:chunk,:]\n",
+    "test_set = train_data.iloc[chunk:,:]\n",
+    "\n",
+    "print(train_set.shape)\n",
+    "print(test_set.shape)\n",
+    "\n",
+    "\n",
+    "test_set.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exporting dataframes to csv files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_set.to_csv(\"train_IDS2017.csv\")\n",
+    "test_set.to_csv(\"test_IDS2017.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Neural Network Training and Testing\n",
     "Define a function that trains the model and evaluates it on the test data, outputs accuracy on the training and test sets."
    ]
